made the buttons appropriate

--- a/calculator/main.html
+++ b/calculator/main.html
@@ -12,28 +12,28 @@
     <h1>Calculator</h1>
     <div class="button-container">
         <div class="button-line">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>&divide;</button>
+        </div>
+        <div class="button-line">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>&times;</button>
+        </div>
+        <div class="button-line">
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>4</button>
+            <button>&mdash;</button>
         </div>
         <div class="button-line">
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-        </div>
-        <div class="button-line">
-            <button>9</button>
-            <button>A</button>
-            <button>B</button>
-            <button>C</button>
-        </div>
-        <div class="button-line">
-            <button>D</button>
-            <button>E</button>
-            <button>F</button>
             <button>0</button>
+            <button>&period;</button>
+            <button>&equals;</button>
+            <button>&plus;</button>
         </div>
     </div>
 </body>
