--- a/calculator/main.html
+++ b/calculator/main.html
@@ -12,7 +12,7 @@
     <h1>Calculator</h1>
 
     <div id="display">
-        <p class="display-text">example text</p>
+        <p class="display-text"></p>
     </div>
 
     <div class="button-container">
