finished rps game

--- a/100jsprojects-com/main.html
+++ b/100jsprojects-com/main.html
@@ -12,7 +12,7 @@
     <h1>Rock Paper Scissors Game</h1>
 
     <h3>Choose your move:</h3>
-    <div>
+    <div id="move">
         <button id="rock" onclick="play('rock')">Rock</button>
         <button id="paper" onclick="play('paper')">Paper</button>
         <button id="scissors" onclick="play('scissors')">Scissors</button>
