implemented a very bad brute force algorithm, but it does in fact work!

--- a/sudoku/main.html
+++ b/sudoku/main.html
@@ -19,7 +19,7 @@
     <br>
 
     <div class="wrapper">
-        <button>Find Solution</button>
+        <button id="solve-btn">Find Solution</button>
     </div>
 
     <script src="index.js"></script>
