--- a/sudoku/main.html
+++ b/sudoku/main.html
@@ -22,7 +22,7 @@
         <button id="solve-btn">Find Solution</button>
     </div>
 
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
